[package]
authors = ["matthew.brisebois@holo.host"]
description = "A Javascript WASM binding for Holochain zome call hashing"
edition = "2021"
keywords = ["holochain", "hashing"]
license = "CAL-1.0"
name = "holochain-zome-call-hashing"
repository = "https://github.com/mjbrisebois/holochain-zome-call-hashing-js"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
holo_hash = { git = "https://github.com/holochain/holochain", rev = "c6bb672d624a884c57ffe588607ffc06aa2f7c74", features = ["encoding"] }
holochain_zome_types = { git = "https://github.com/holochain/holochain", rev = "c6bb672d624a884c57ffe588607ffc06aa2f7c74", default-features = false }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2"
